Revision history for Lufi

?.??.? ????-??-??

0.05.15 2021-11-03
	- 🐛 Fix mail signature separator
	- 💄 Disable signature when using LDAP (#249)
	- 🌐 Update translations
	- 🔒 Fix XSS where using zip feature (#254)
	- 🔒 Fix unauthorized manipulations of invitations (#254)
	- 🔒 Detect schemeless URL in mail (#254)

0.05.14 2021-06-16
	- 🔧 Set default morbo port to 3000 (as it should have stay)
	- 🐛 Fix `Notification not defined` in Duckduckgo browser (Fix #224 again)
	- ✨ Add `disable_mail_sending` config parameter
	- 🌐 Update translations

0.05.13 2021-01-28
	- 🐛 Fix latest git tag improperly fetched

0.05.12 2021-01-13
	- 🌐 Update translations
	- 🐛 Fix `Notification not defined`

0.05.11 2020-12-07
	- 🌐 Update translations
	- 🐛 Try to avoid clients constantly hitting /download/XXX

0.05.10 2020-11-28
	- 🌐 Update translations

0.05.9 2020-11-25
	- 🐛 Invitation, error 500 when guest send file with special character (#229)
	- 🌐 Update translations

0.05.8 2020-11-18
	- 🌐 Update translations

0.05.7 2020-10-06
	- 🐛 Remove breakingchanges migration from sqliteToOtherDB (no need for now)

0.05.6 2020-09-28
	- 🌐 Update translations
	- 📝 Document file deletion behavior

0.05.5 2020-08-20
	- 🐛 Change lufi-provisioning.lock handling process to avoid error messages (#210)

0.05.4 2020-08-17
	- 🐛 Fix incorrect HTML in delays.html.ep (#207)

0.05.3 2020-08-17
	- 🐛 Check if provisioning lockfile mod time exists before using it (#208)

0.05.2 2020-07-25
	- 🔥 Remove code from abandonned feature
	- Fix regression introduced in 0.05.1 (#201)

0.05.1 2020-06-30
	- Update german translation
	- Fix possible high load due to concurrent provisioning

0.05.0 2020-06-02
	- Notifications when uploading and downloading files (#181)
	- Use Weblate instead of Zanata for translations (https://weblate.framasoft.org/projects/lufi/development/)
	- Add config API endpoint (#183)
	- Show latest tag and commit of the instance in about page and config API endpoint (#174)